// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<style>
.S1 {
  color: rgba(133,0,41,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  line-height: 27px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`2. with a very long byline 1`] = `
<style>
.S1 {
  color: rgba(133,0,41,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  line-height: 27px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    Camilla Long
  </div>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    , Environment Editor | 
  </div>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    Camilla Long
  </div>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    , Environment Editor | 
  </div>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    Camilla Long
  </div>
  <div
    className="css-text-76zvg2 r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw S1"
  >
    , Environment Editor
  </div>
</div>
`;
